// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextField renders 1`] = `
<DocumentFragment>
  <div
    class="ds-u-clearfix"
  >
    <label
      class="ds-c-label"
      for="text-field--1"
      id="text-field--1__label"
    >
      <span
        class=""
      >
        Foo
      </span>
    </label>
    <input
      aria-invalid="false"
      class="ds-c-field"
      id="text-field--1"
      name="spec-field"
      type="text"
    />
  </div>
</DocumentFragment>
`;

exports[`TextField renders with a label mask 1`] = `
<DocumentFragment>
  <div
    class="ds-u-clearfix"
  >
    <label
      class="ds-c-label"
      for="text-field--2"
      id="text-field--2__label"
    >
      <span
        class=""
      >
        Foo
      </span>
    </label>
    <div
      class="ds-c-label-mask"
      id="text-field--2__label-mask"
    >
      <span
        class=""
      >
        MM/DD/YYYY
      </span>
      <span
        aria-hidden="true"
        class="ds-u-display--none"
      >
        MM/DD/YYYY
      </span>
    </div>
    <input
      aria-describedby="text-field--2__label-mask"
      aria-invalid="false"
      class="ds-c-field"
      id="text-field--2"
      inputmode="numeric"
      name="spec-field"
      type="text"
      value=""
    />
  </div>
</DocumentFragment>
`;

exports[`TextField renders with a mask 1`] = `
<DocumentFragment>
  <div
    class="ds-u-clearfix"
  >
    <label
      class="ds-c-label"
      for="text-field--4"
      id="text-field--4__label"
    >
      <span
        class=""
      >
        Foo
      </span>
    </label>
    <div
      class="ds-c-field-mask ds-c-field-mask--currency"
    >
      <div
        class="ds-c-field__before ds-c-field__before--currency"
      >
        $
      </div>
      <input
        aria-invalid="false"
        class="ds-c-field ds-c-field--currency"
        id="text-field--4"
        inputmode="numeric"
        name="spec-field"
        pattern="[0-9.,-]*"
        type="text"
        value=""
      />
    </div>
  </div>
</DocumentFragment>
`;
